[gd_scene load_steps=10 format=3 uid="uid://ds1srgc15xh70"]

[ext_resource type="Script" path="res://src/main.gd" id="1_7hmxl"]
[ext_resource type="Texture2D" uid="uid://cay0tw78thr7e" path="res://assets/Space_BG_2_frames_64x64.png" id="2_sbl10"]
[ext_resource type="PackedScene" uid="uid://bhly1sn1nyugw" path="res://scenes/player.tscn" id="2_ub1gs"]
[ext_resource type="PackedScene" uid="uid://du6kybeyrcmf2" path="res://scenes/ui.tscn" id="4_fde2l"]
[ext_resource type="FontFile" uid="uid://qf2y7hd0xsdv" path="res://assets/UI_objects/FutureKid.ttf" id="5_bfp7s"]

[sub_resource type="Animation" id="Animation_7oex0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_h81m7"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gky1u"]
_data = {
"RESET": SubResource("Animation_7oex0"),
"scroll": SubResource("Animation_h81m7")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aip00"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_7hmxl")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_sbl10")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="Player" parent="." instance=ExtResource("2_ub1gs")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_gky1u")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_fde2l")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.662745, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.662745, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.662745, 0, 1)
theme_override_fonts/font = ExtResource("5_bfp7s")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_aip00")
theme_override_styles/hover = SubResource("StyleBoxFlat_aip00")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aip00")
text = "START GAME"

[node name="GameOver" type="Label" parent="CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.823529, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_bfp7s")
theme_override_font_sizes/font_size = 8
text = "GAME OVER"

[node name="PauseButton" type="Button" parent="CanvasLayer/CenterContainer"]
process_mode = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.505882, 0.341176, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.503949, 0.342659, 0.855201, 1)
theme_override_colors/font_hover_color = Color(0.503949, 0.342659, 0.855201, 1)
theme_override_fonts/font = ExtResource("5_bfp7s")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_aip00")
theme_override_styles/hover = SubResource("StyleBoxFlat_aip00")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aip00")
text = "PAUSED"

[connection signal="game_state_changed" from="." to="." method="_on_game_state_changed"]
[connection signal="game_state_changed" from="." to="Player" method="_on_main_game_state_changed"]
[connection signal="game_state_changed" from="." to="CanvasLayer/UI" method="_on_main_game_state_changed"]
[connection signal="pause_game" from="." to="." method="_on_pause_game"]
[connection signal="score_changed" from="." to="CanvasLayer/UI" method="_on_main_score_changed"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="died" from="Player" to="CanvasLayer/UI" method="_on_player_died"]
[connection signal="gained_life" from="Player" to="CanvasLayer/UI" method="_on_player_gained_life"]
[connection signal="out_of_lives" from="Player" to="." method="_on_player_out_of_lives"]
[connection signal="out_of_lives" from="Player" to="CanvasLayer/UI" method="_on_player_out_of_lives"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="_on_player_shield_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PauseButton" to="." method="_on_pause_button_pressed"]
